Got individual invoices working 100% AFAIK.

--- a/tickets/acc-template.html
+++ b/tickets/acc-template.html
@@ -144,7 +144,7 @@
     <td colSpan='4'><img src='logo.png' width='50%' height='50%' /></td>
   </tr>
   <tr class='center'>
-    <td colSpan='4' class='small'>3435 Lawson Blvd<br />
+    <td colSpan='4' class='small'>2882 Long Beach Rd<br />
                                   Oceanside, NY 11572<br />
                                   1-800-442-2828</td>
   </tr>
