--- a/billing/invoices/I14-0015.html
+++ b/billing/invoices/I14-0015.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-			<title>Invoice for 10377</title>
+			<title>Invoice for 00000</title>
 		<link rel="stylesheet" href="styles.css" type="text/css" />
 		<style>
 		  * { font-size:14pt; }
@@ -9,6 +9,7 @@
 			TABLE { border-collapse: collapse; }
 			@media print {
 			  BUTTON { display:none; }
+				.message { display: none; }
 			}
 		</style>
 		<script type="text/javascript" src="jquery-1.9.1.js"></script>
@@ -17,12 +18,12 @@
 		<button onclick="window.location='invoice.php'" accesskey='R'><u>R</u>eturn to invoice form</button>
 		<br />
 		<span style='float:right'><a href="index.php"><img src="logo.png" /></a><br />
-		3435 Lawson Blvd<br />
+		2882 Long Beach Rd<br />
 		Oceanside, NY 11572<br />
 		<br />
 		(516)442-2828</span><br clear='both' />
-		MICHAEL TENORE<br />99 ELM ST.<br />YONKERS, NY 10701-<br />		<table>
-			<h3>Invoice #I14-0015 as of 4/5/2014</h3><tr><th>Invoice Date</th><th>Ticket Number</th><th>Use Date</th><th>Reference</th><th>Credit</th><th>Charge</th></tr><tr style='border-top:2px solid #000000'><td>4/5/2014&nbsp;</td><td>B031-0&nbsp;</td><td>4/11/2014&nbsp;</td><td>retest1&nbsp;</td><td>&nbsp;</td><td>$58.00</td><tr><td>&nbsp;</td><td>B031-1&nbsp;</td><td>4/11/2014&nbsp;</td><td>retest1&nbsp;</td><td>&nbsp;</td><td>$15.00</td><tr><td>&nbsp;</td><td>B032-0&nbsp;</td><td>4/11/2014&nbsp;</td><td>restest1&nbsp;</td><td>&nbsp;</td><td>$58.00</td><tr><td>&nbsp;</td><td>B032-1&nbsp;</td><td>4/11/2014&nbsp;</td><td>restest1&nbsp;</td><td>&nbsp;</td><td>$15.00</td><tr><td>&nbsp;</td><td>B033-0&nbsp;</td><td>4/11/2014&nbsp;</td><td>FETEST2&nbsp;</td><td>&nbsp;</td><td>$32.00</td><tr><th>Total</th><td colspan='5' style='text-align:right'>$178.00</td></tr><tr><th>Payments</th><td colspan='5' style='text-align:right'>$0.00</td></tr><tr><th>Credit</th><td colspan='5' style='text-align:right'>$0.00</td></tr><tr><td colspan='6'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Remaining Balance</th><td colspan='5' style='text-align:right; background-color:#cccccc'>$178.00</td></tr><script>$(function() { window.print(); });</script>		</table>
+		TEST CUSTOMER<br />12345 NW 45th Place<br />BROOKLYN, NY 11203<br />		<table>
+			<h3>Invoice #I14-0015 as of 8/12/2014</h3><tr><th>Invoice Date</th><th>Ticket Number</th><th>Use Date</th><th>Reference</th><th>Amount</th></tr><tr><td>2014-8-12</td><td>B033-0</td><td>2014-04-16 00:00:00</td><td>Someone Else</td><td>56</td><tr><td>2014-8-12</td><td>B033-1</td><td>2014-04-16 00:00:00</td><td>Someone Else</td><td>15</td><tr><td colspan='5'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Total</th><td colspan='4' style='text-align:right'>$71.00</td></tr><script>$(function() { window.print(); });</script>		</table>
 		<br />
 		<button onclick="window.location='invoice.php'" accesskey='R'><u>R</u>eturn to invoice form</button>
 		</body>
