--- a/billing/invoices/I14-0017.html
+++ b/billing/invoices/I14-0017.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-			<title>Invoice for 11562</title>
+			<title>Invoice for 00000</title>
 		<link rel="stylesheet" href="styles.css" type="text/css" />
 		<style>
 		  * { font-size:14pt; }
@@ -9,6 +9,7 @@
 			TABLE { border-collapse: collapse; }
 			@media print {
 			  BUTTON { display:none; }
+				.message { display: none; }
 			}
 		</style>
 		<script type="text/javascript" src="jquery-1.9.1.js"></script>
@@ -17,12 +18,12 @@
 		<button onclick="window.location='invoice.php'" accesskey='R'><u>R</u>eturn to invoice form</button>
 		<br />
 		<span style='float:right'><a href="index.php"><img src="logo.png" /></a><br />
-		3435 Lawson Blvd<br />
+		2882 Long Beach Rd<br />
 		Oceanside, NY 11572<br />
 		<br />
 		(516)442-2828</span><br clear='both' />
-		TRAPUZZANO'S TUXEDO<br />148 N. MAIN ST.<br />WASHINGTON, PA 15301<br />		<table>
-			<h3>Invoice #I14-0017 as of 4/5/2014</h3><tr><th>Invoice Date</th><th>Ticket Number</th><th>Use Date</th><th>Reference</th><th>Credit</th><th>Charge</th></tr><tr style='border-top:2px solid #000000'><td>4/5/2014&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5305322183&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr style='border-top:2px solid #000000'><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5485322052&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5595322053&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>3245322052&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>9685322183&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>9945322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>3845322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>9375322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>7795322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5685322184&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>8835322057&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5532205317&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>3665322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>1855322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>4075322057&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>3315322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>2455322057&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>6025322184&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>2253220535&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>9153221845&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>4065322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>3365322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>8655322053&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><th>Total</th><td colspan='5' style='text-align:right'>$253.00</td></tr><tr><th>Payments</th><td colspan='5' style='text-align:right'>$0.00</td></tr><tr><th>Credit</th><td colspan='5' style='text-align:right'>$0.00</td></tr><tr><td colspan='6'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Remaining Balance</th><td colspan='5' style='text-align:right; background-color:#cccccc'>$253.00</td></tr><script>$(function() { window.print(); });</script>		</table>
+		TEST CUSTOMER<br />12345 NW 45th Place<br />BROOKLYN, NY 11203<br />		<table>
+			<h3>Invoice #I14-0017 as of 8/12/2014</h3><tr><th>Invoice Date</th><th>Ticket Number</th><th>Use Date</th><th>Reference</th><th>Amount</th></tr><tr><td>2014-8-12</td><td>B033-0</td><td>2014-04-16 00:00:00</td><td>Someone Else</td><td>56</td><tr><td>2014-8-12</td><td>B033-1</td><td>2014-04-16 00:00:00</td><td>Someone Else</td><td>15</td><tr><td colspan='5'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Total</th><td colspan='4' style='text-align:right'>$71.00</td></tr>INSERT INTO `t-a-billing` VALUES ('00000', 0, '', NOW(), 'I14-0017', 1, '', 71, 0.00, 71<script>$(function() { window.print(); });</script>		</table>
 		<br />
 		<button onclick="window.location='invoice.php'" accesskey='R'><u>R</u>eturn to invoice form</button>
 		</body>
