--- a/billing/invoices/I14-0018.html
+++ b/billing/invoices/I14-0018.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-			<title>Invoice for 10509</title>
+			<title>Invoice for 00000</title>
 		<link rel="stylesheet" href="styles.css" type="text/css" />
 		<style>
 		  * { font-size:14pt; }
@@ -9,6 +9,7 @@
 			TABLE { border-collapse: collapse; }
 			@media print {
 			  BUTTON { display:none; }
+				.message { display: none; }
 			}
 		</style>
 		<script type="text/javascript" src="jquery-1.9.1.js"></script>
@@ -17,12 +18,12 @@
 		<button onclick="window.location='invoice.php'" accesskey='R'><u>R</u>eturn to invoice form</button>
 		<br />
 		<span style='float:right'><a href="index.php"><img src="logo.png" /></a><br />
-		3435 Lawson Blvd<br />
+		2882 Long Beach Rd<br />
 		Oceanside, NY 11572<br />
 		<br />
 		(516)442-2828</span><br clear='both' />
-		MR. TUX<br />357 BOYSTON ST.<br />BROOKLINE, MA 02146-<br />		<table>
-			<h3>Invoice #I14-0018 as of 4/5/2014</h3><tr><th>Invoice Date</th><th>Ticket Number</th><th>Use Date</th><th>Reference</th><th>Credit</th><th>Charge</th></tr><tr style='border-top:2px solid #000000'><td>4/5/2014&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>4605322053&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr style='border-top:2px solid #000000'><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>4515322183&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>6935322052&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>9205322057&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>8535322183&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>8985322052&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>1915322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5395322057&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>2515322184&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>655322058b&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>2975322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>7705322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>8935322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>3765322059&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5953220539&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>4325322184&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>1225322183&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5745322053&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>3755322053&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>4445322057&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>5295322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>9195322058&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><td>&nbsp;</td><td>&nbsp;</td><td>3/13/2014&nbsp;</td><td>8505322184&nbsp;</td><td>&nbsp;</td><td>$11.00</td><tr><th>Total</th><td colspan='5' style='text-align:right'>$253.00</td></tr><tr><th>Payments</th><td colspan='5' style='text-align:right'>$0.00</td></tr><tr><th>Credit</th><td colspan='5' style='text-align:right'>$0.00</td></tr><tr><td colspan='6'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Remaining Balance</th><td colspan='5' style='text-align:right; background-color:#cccccc'>$253.00</td></tr><script>$(function() { window.print(); });</script>		</table>
+		TEST CUSTOMER<br />12345 NW 45th Place<br />BROOKLYN, NY 11203<br />		<table>
+			<h3>Invoice #I14-0018 as of 8/12/2014</h3><tr><th>Invoice Date</th><th>Ticket Number</th><th>Use Date</th><th>Reference</th><th>Amount</th></tr><tr><td>2014-8-12</td><td>B033-0</td><td>2014-04-16 00:00:00</td><td>Someone Else</td><td>56</td><tr><td>2014-8-12</td><td>B033-1</td><td>2014-04-16 00:00:00</td><td>Someone Else</td><td>15</td><tr><td colspan='5'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Total</th><td colspan='4' style='text-align:right'>$71.00</td></tr><script>$(function() { window.print(); });</script>		</table>
 		<br />
 		<button onclick="window.location='invoice.php'" accesskey='R'><u>R</u>eturn to invoice form</button>
 		</body>
