Added customer and ticket lookups.

--- a/billing/invoices/RECAP.html
+++ b/billing/invoices/RECAP.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-			<title>Invoice for 00499</title>
+			<title>Invoice for 00000</title>
 		<link rel="stylesheet" href="styles.css" type="text/css" />
 		<style>
 		  * { font-size:10pt; }
@@ -23,8 +23,8 @@
 		2882 Long Beach Rd<br />
 		Oceanside, NY 11572<br />
 		(516)442-2828</span><br clear='both' />
-		<span style='float:left'>RICO'S CLOTHING</span><span style='float:right; font-weight:bold'>Invoice RECAP</span><br /><span style='float:left'>16 RAILROAD AVE.</span><span style='float:right; font-weight:bold'>8/19/2014</span><br /><span style='float:left'>CENTER MORICHES, NY 11934-</span></span><br /><br />		<table>
-			<tr><th>Opening Balance</th><td colspan='4' class='right'>$857.68</td></tr><tr><td colspan='5'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Total Charges</th><td colspan='4' class='right'>$0.00</td></tr><tr><th>Total Payments/Credits</th><td colspan='4' class='right'>$0.00</td></tr><tr><th>Current Balance</th><td colspan='4' class='right'>$857.68</td></tr>		</table>
+		<span style='float:left'>TEST CUSTOMER</span><span style='float:right; font-weight:bold'>Invoice RECAP</span><br /><span style='float:left'>12345 NW 45th Place</span><span style='float:right; font-weight:bold'>9/18/2014</span><br /><span style='float:left'>BROOKLYN, NY 11203</span></span><br /><br />		<table>
+			<tr><th colspan='5' style='border-top:2px solid #000000'>Previous Invoices</th></tr><tr><th colspan='2'>Invoice Date</th><th colspan='2'>Invoice #</th><th colspan='2'>Invoice Totals</th></tr><tr><td colspan='2'>2014-09-18</td><td colspan='2'>I14-1097</td><td colspan='2' class='right'>$32.00</td></tr><tr><th>Total Previous Charges</th><td colspan='4' class='right'>$32.00</td></tr><tr><td colspan='5'>&nbsp;</td></tr><tr style='border-top:2px solid #000000'><th>Opening Balance</th><td colspan='4' class='right'>$70.00</td></tr><tr><th>Total Charges</th><td colspan='4' class='right'>$32.00</td></tr><tr><th>Current Balance</th><td colspan='4' class='right'>$102.00</td></tr>		</table>
 		<br />
 		<button onclick="window.location='invoice.php'" accesskey='R'><u>R</u>eturn to invoice form</button>
 		</body>
