--- a/tickets/shoe-template.html
+++ b/tickets/shoe-template.html
@@ -9,7 +9,7 @@
   .middle { vertical-align:middle; }
 
   .code { font-family:"Free 3 of 9"; }
-  .ticketHead { color:#aaaaaa; font-family:Calibri; }
+  .ticketHead { color:#00000; font-family:Calibri; }
   .bold { font-weight:bold; }
   .big { font-size:36pt; }
   .medium { font-size:18pt; }
