Bolded comments on work tickets.

--- a/tickets/acc-template.html
+++ b/tickets/acc-template.html
@@ -136,7 +136,7 @@
   </tr>
 
   <tr>
-    <td colSpan='5' class='topdivider'>$$W-COMMENTS$$</td>
+    <td colSpan='5' class='topdivider' style='font-weight:bold'>$$W-COMMENTS$$</td>
   </tr>
 
 
