--- a/tickets/template.html
+++ b/tickets/template.html
@@ -110,7 +110,7 @@
   </tr>
 
   <tr>
-    <td colSpan='4' class='topdivider'>$$W-COMMENTS$$</td>
+    <td colSpan='4' class='topdivider' style='font-weight:bold'>$$W-COMMENTS$$</td>
   </tr>
 
 
