Added customer number to top of tickets.

--- a/tickets/template.html
+++ b/tickets/template.html
@@ -31,7 +31,7 @@
     <td class='medium right bottom'>$$W-TKT$$-$$W-TKT-SUB$$</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
-    <td class='left'>&nbsp;</td>
+    <td class='left small'>$$W-CUSTNO$$</td>
   </tr>
 
   <tr>
@@ -110,7 +110,7 @@
   </tr>
 
   <tr>
-    <td colSpan='4' class='topdivider' style='font-weight:bold'>$$W-COMMENTS$$</td>
+    <td colSpan='4' class='topdivider bold'>$$W-COMMENTS$$</td>
   </tr>
 
 
