--- a/tickets/acc-template.html
+++ b/tickets/acc-template.html
@@ -31,8 +31,7 @@
     <td class='medium right bottom'>$$W-TKT$$-$$W-TKT-SUB$$</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
-    <td class='left'><span class='small ticketHead bold'>Use Date</span><br />
-                       $$W-USE-DT$$</td>
+    <td class='left small'>$$W-CUSTNO$$</td>
   </tr>
 
   <tr>
@@ -43,7 +42,8 @@
   </tr>
 
   <tr>
-    <td>&nbsp;</td>
+    <td><span class='small ticketHead bold'>Use Date</span><br />
+                       $$W-USE-DT$$</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td><span class='small ticketHead bold'>Order Date</span><br />
@@ -136,7 +136,7 @@
   </tr>
 
   <tr>
-    <td colSpan='5' class='topdivider' style='font-weight:bold'>$$W-COMMENTS$$</td>
+    <td colSpan='5' class='topdivider bold'>$$W-COMMENTS$$</td>
   </tr>
 
 
